--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,12 @@
 *.log
 
 # sbt specific
-dist/*
+dist/
 target/
 lib_managed/
 src_managed/
 project/boot/
+project/target/
 project/plugins/project/
 
 # Scala-IDE specific
